syntax = "proto3";

option csharp_namespace = "SmartGarden.AuthService";

package auth;

service AuthGrpc {
  rpc ValidateToken (TokenRequest) returns (TokenValidationResult);
}

message TokenRequest {
  string token = 1;
}

message TokenValidationResult {
  bool isValid = 1;
  string userId = 2;
}
